bugfix menu z-index

--- a/app/assets/sass/_all.sass
+++ b/app/assets/sass/_all.sass
@@ -79,3 +79,47 @@ h2
 		transition: 0.3s ease-out
 		&:hover
 			color: $text
+
+
+
+.form_custom
+	font-family: $roboto
+	position: fixed
+	background-color: #fff
+	z-index: 99
+	top: 50px
+	left: 50px
+	border-radius: $bd-radius
+	.form_item
+		padding: 36px 26px
+	h4
+		color: $accent
+		font-family: $bold
+		font-size: 22px
+		margin-bottom: 20px
+	input,
+	textarea,
+		display: block
+		border: 1px solid $border
+		padding: 10px
+		border-radius: 5px
+		margin-bottom: 26px
+		width: 100%
+
+	label
+		display: block
+		font-size: 18px
+		margin-bottom: 0
+
+	button
+		background: linear-gradient(180deg, $button 0%, #B90144 100%)
+		border-radius: 30px
+		color: #fff
+		display: inline-block
+		border: none
+		padding: 10px 30px
+		text-transform: uppercase
+		font-size: 24px
+		transition: 0.3s ease
+		&:hover
+			background: $text
