--- a/app/assets/sass/_fonts.sass
+++ b/app/assets/sass/_fonts.sass
@@ -27,3 +27,12 @@
 	src: url("fonts/stem/Stem-Bold.woff2") format("woff2")
 	font-weight: normal
 	font-style: normal
+
+
+/*===== Roboto Regular =====*/
+@font-face
+	font-family: "Roboto-Regular"
+	src: url("../fonts/RobotoRegular/RobotoRegular.woff2")
+	src: url("../fonts/RobotoRegular/RobotoRegular.ttf")
+	font-weight: normal
+	font-style: normal
