--- a/app/assets/sass/_vars.sass
+++ b/app/assets/sass/_vars.sass
@@ -4,6 +4,7 @@ $button: #F3568F
 $text: #67432B
 $chat: #C09D84
 $footer: #C4848F
+$border: #E0E0E0
 
 //==== FONTS ====//
 $def-font: "Stem-Regular"
@@ -11,6 +12,9 @@ $light: "Stem-Light"
 $regular: "Stem-Regular"
 $medium: "Stem-Medium"
 $bold: "Stem-Bold"
+$roboto: "Roboto-Regular"
+
+$bd-radius: 20px
 
 
 //==== MIXINS ====//
